--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $10000",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.4",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
